--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1> White Water Rafting</h1>
+    <h2>James Thueson</h2>
+    <h2>WDD 130-2</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,11 +20,12 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>Find what you love about rafting! Disscover the best times of the year to have your perfect experience.
+      Match what you are looking for with the best prices. </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Whether you are planning for a family trip, or just looking for an adventure, you have come to the right place. We have what you need for the for the best experience on the water.</p>
     <!-- change this -->
 
     <hr />
@@ -42,8 +43,8 @@
 
     <!-- Copy and paste the URL to your finished palette below. Replace the href value that is there with yours. Make sure to paste it into both the href value and the content text of the <a> tag -->
     <p>Palette URL:</p>
-    <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c"
-      target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+    <a href="https://coolors.co/palette/006d77-83c5be-edf6f9-ffddd2-e29578"
+      target="_blank">https://coolors.co/palette/006d77-83c5be-edf6f9-ffddd2-e29578</a>
 
     <table class="colors">
       <tr>
@@ -54,9 +55,9 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#396E94]</td>
-        <td class="secondary">[#E7C24F]</td>
-        <td class="accent1">[#A43312]</td>
+        <td class="primary">[#006D77]</td>
+        <td class="secondary">[#83C5BE]</td>
+        <td class="accent1">[#E29578]</td>
         <td class="accent2"></td>
       </tr>
     </table>
@@ -67,11 +68,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Indie Flower
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Roboto Slab
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
